--- a/index.html
+++ b/index.html
@@ -25,17 +25,26 @@
       <div id="result"></div>
     </div>
     <div class="title">
-      <div id="names"><h1>Names</h1></div>
+      <div class="names">
+        <div><h1>Names</h1></div>
+        <div class="names-selector">
+          <select id="sort" onchange="sort()">
+            <option value="..">..</option>
+            <option value="a-z">a-z</option>
+            <option value="z-a">z-a</option>
+          </select>
+        </div>
+      </div>
       <h1>Ganre</h1>
       <h1>Episodes</h1>
       <h1>Creator</h1>
     </div>
-    
-      <pre>JSON GOES HERE</pre>
-    
+
+    <pre>JSON GOES HERE</pre>
+
     <!-- <div>
       <div id="result"></div>
     </div> -->
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
   </body>
 </html>
